# pico-examples

./: CMakeLists.txt
blink_led/: CMakeLists.txt  blink_led.c
i2c/bus_scan/: bus_scan.c
pio/i2c/: i2c_bus_scan.c
temp_tracker/: CMakeLists.txt  si7021_picopi.c  si7021_picopi.h  temp_tracker.c
